--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
