--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@splidejs/react-splide": "^0.7.8",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "next": "12.2.3",
